Edit Texture Space on Skin Resize crash #37671

Closed
opened 2013-12-01 14:13:46 +01:00 by Cedric GEMY · 7 comments

System Information
Debian wheezy 32bits on ThinkPAd X220 i7-2640M Intel® Sandybridge Mobile x86/MMX/SSE2

Blender Version
Broken: Blender 2.69
Trunk : Blender 2.69 e3ee0b1 built 2013/12/1

Short description of error
Crash when checking on the Edit texture space checkbox in Skin resize panel

Exact steps for others to reproduce the error

  1. Select default cube
  2. Modifier>Skin
  3. Edit Mode
  4. Ctrl A -> resize -> enter
  5. Go to skin resize panel in ToolBox and check Edit Texture space Option
**System Information** Debian wheezy 32bits on ThinkPAd X220 i7-2640M Intel® Sandybridge Mobile x86/MMX/SSE2 **Blender Version** Broken: Blender 2.69 Trunk : Blender 2.69 e3ee0b1 built 2013/12/1 **Short description of error** Crash when checking on the Edit texture space checkbox in Skin resize panel **Exact steps for others to reproduce the error** 1. Select default cube 2. Modifier>Skin 3. Edit Mode 4. Ctrl A -> resize -> enter 5. Go to skin resize panel in ToolBox and check Edit Texture space Option
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @pygmee

Added subscriber: @pygmee
Author

backtrace of crash

backtrace of crash

This issue was referenced by blender/blender-addons-contrib@4ac17b3f0c

This issue was referenced by blender/blender-addons-contrib@4ac17b3f0ca8c538ff0ad82899dfcb374ed5f280

This issue was referenced by 4ac17b3f0c

This issue was referenced by 4ac17b3f0ca8c538ff0ad82899dfcb374ed5f280

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4ac17b3f0c.

Closed by commit 4ac17b3f0c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37671
No description provided.