Fix T37671: Edit Texture Space on Skin Resize crash

Texture space editing from TFM_SKIN_RESIZE is not supported,
so hide the option and don't use it for such a transform.