source/blender/editors/include/ED_transform.h
@@ -144,6 +144,7 @@ int BIF_countTransformOrientation(const struct bContext *C);
 #define P_OPTIONS       (1 << 7)
 #define P_CORRECT_UV    (1 << 8)
 #define P_NO_DEFAULTS   (1 << 10)
+#define P_NO_TEXSPACE   (1 << 11)
 
 void Transform_Properties(struct wmOperatorType *ot, int flags);
 
